@@ -61,29 +61,23 @@ public class SdkGenRestfulTs implements RestfulCodeGenerator {
             code.add("import * as " + includeName + " from '" + includeValue + "'");
         }
         if (namespace.contains("apis")) {
-            String importStr = "import { requireAxios as _requireAxios, requireJSON as _requireJSON, type Page as _Page } from '";
+            String importStr = "import {\n";
+            importStr += TAB + "requireHttpUtil as _http,\n";
+            importStr += TAB + "requireJSON as _JSON,\n";
+            importStr += TAB + "type Page as _Page,\n";
+            importStr += TAB + "type HttpResult as _HttpResult\n";
+            importStr += "} from '";
             int layer = StrUtil.count(namespace, ".") + 1;
             for (int i = 0; i < layer; i++) {
                 importStr += "../";
             }
-            importStr += "apisUtil'";
+            importStr += "apis-util'";
             code.add(importStr);
             code.add("");
-            code.add("""
-                    let _axiosInstance: any
-                    const _axios = async () => {
-                      if (_axiosInstance) {
-                        return _axiosInstance
-                      }
-                      _axiosInstance = await _requireAxios()
-                      return _axiosInstance
-                    }
-                    """);
             for (var interfaceBean : rootBean.getInterfaceList()) {
                 code.add(genApiCode(interfaceBean));
             }
         }
-        code.add("");
         for (var classBean : rootBean.getClassList()) {
             for (var commentBean : classBean.getCommentList()) {
                 code.add("// " + commentBean.getCommentValue());
@@ -99,7 +93,7 @@ public class SdkGenRestfulTs implements RestfulCodeGenerator {
                 if (fieldBean.getDoc() != null) {
                     code.add(StrUtil.format(innerDocFormat, fieldBean.getDoc().getCommentValue()));
                 }
-                String fieldTsString = fieldBean.getType().tsString() + (ParseRestfulSyntaxTreeUtil.Modifier.OPTIONAL.equals(fieldBean.getModifier()) ? " | null" : "");
+                String fieldTsString = fieldBean.getType().tsString() + (ParseRestfulSyntaxTreeUtil.Modifier.OPTIONAL.equals(fieldBean.getModifier()) ? " | undefined" : "");
                 code.add(TAB + fieldBean.getFieldName() + ": " + fieldTsString);
             }
             code.add("}");
@@ -141,7 +135,7 @@ public class SdkGenRestfulTs implements RestfulCodeGenerator {
             throw new OnebootGenCodeException("api缺少uri映射", HttpStatus.INTERNAL_SERVER_ERROR);
         }
         if (CollUtil.isNotEmpty(requestMappingValues)) {
-            serviceUri = requestMappingValues.get(0);
+            serviceUri = requestMappingValues.getFirst();
         }
         for (ParseRestfulSyntaxTreeUtil.CommentBean commentBean : interfaceBean.getCommentList()) {
             code.add("// " + commentBean.getCommentValue());
@@ -194,26 +188,26 @@ public class SdkGenRestfulTs implements RestfulCodeGenerator {
                         throw new OnebootGenCodeException("@uri不允许注解在具体方法上，必须指定一个特定的http方法，请使用@postUri或@getUri", HttpStatus.INTERNAL_SERVER_ERROR);
                     }
                     case GET_MAPPING -> {
-                        functionUri = annoEntry.getValue().get(0);
-                        executeFormat = TAB + TAB + "return (await (await _axios()).get(`{}`)).data";
+                        functionUri = annoEntry.getValue().getFirst();
+                        executeFormat = TAB + TAB + "return (await _http()).get(`{}`)";
                     }
                     case DELETE_MAPPING -> {
-                        functionUri = annoEntry.getValue().get(0);
-                        executeFormat = TAB + TAB + "return (await (await _axios()).delete(`{}`)).data";
+                        functionUri = annoEntry.getValue().getFirst();
+                        executeFormat = TAB + TAB + "return (await _http()).delete(`{}`)";
                     }
                     case POST_MAPPING -> {
-                        functionUri = annoEntry.getValue().get(0);
-                        executeFormat = TAB + TAB + "return (await (await _axios()).post(`{}`, {})).data";
+                        functionUri = annoEntry.getValue().getFirst();
+                        executeFormat = TAB + TAB + "return (await _http()).post(`{}`, {})";
                         isPost = true;
                     }
                     case PUT_MAPPING -> {
-                        functionUri = annoEntry.getValue().get(0);
-                        executeFormat = TAB + TAB + "return (await (await _axios()).put(`{}`, {})).data";
+                        functionUri = annoEntry.getValue().getFirst();
+                        executeFormat = TAB + TAB + "return (await _http()).put(`{}`, {})";
                         isPost = true;
                     }
                     case PATCH_MAPPING -> {
-                        functionUri = annoEntry.getValue().get(0);
-                        executeFormat = TAB + TAB + "return (await (await _axios()).patch(`{}`, {})).data";
+                        functionUri = annoEntry.getValue().getFirst();
+                        executeFormat = TAB + TAB + "return (await _http()).patch(`{}`, {})";
                         isPost = true;
                     }
                 }
@@ -224,9 +218,9 @@ public class SdkGenRestfulTs implements RestfulCodeGenerator {
                 functionUri = StrUtil.replaceFirst(functionUri, match, "${encodeURI(p_" + pathVar + ".toString())}");
                 pathVarSet.add(pathVar);
             }
-            if (isPost && interfaceFunction.getParamList().size() == 1 && !interfaceFunction.getParamList().get(0).getParamType().isIntype()) {
+            if (isPost && interfaceFunction.getParamList().size() == 1 && !interfaceFunction.getParamList().getFirst().getParamType().isIntype()) {
                 // 只有单个参数
-                executeParam = "p_" + interfaceFunction.getParamList().get(0).getParamName();
+                executeParam = "p_" + interfaceFunction.getParamList().getFirst().getParamName();
             } else {
                 StringJoiner executeParamJoiner = isPost ? new StringJoiner(", ", "{ ", " }") : new StringJoiner("&", "?", "");
                 executeParamJoiner.setEmptyValue("");
@@ -239,9 +233,9 @@ public class SdkGenRestfulTs implements RestfulCodeGenerator {
                         continue;
                     }
                     if (param.getParamType().isIntype()) {
-                        executeParamJoiner.add(param.getParamName() + "=" + "${encodeURI(p_" + param.getParamName() + ")}");
+                        executeParamJoiner.add(param.getParamName() + "=" + "${encodeURI(p_" + param.getParamName() + ".toString())}");
                     } else {
-                        executeParamJoiner.add(param.getParamName() + "=" + "${encodeURI(_requireJSON().stringify(p_" + param.getParamName() + "))}");
+                        executeParamJoiner.add(param.getParamName() + "=" + "${encodeURI(_JSON().stringify(p_" + param.getParamName() + "))}");
                     }
                 }
                 executeParam = executeParamJoiner.toString();
@@ -249,10 +243,14 @@ public class SdkGenRestfulTs implements RestfulCodeGenerator {
             String functionHeader = TAB + interfaceFunction.getFunctionName() + ": async ";
             StringJoiner paramStringJoiner = new StringJoiner(", ", "(", ")");
             for (var param : interfaceFunction.getParamList()) {
-                paramStringJoiner.add("p_" + param.getParamName() + ": " + param.getParamType().tsString());
+                String otherType = "";
+                if (ParseRestfulSyntaxTreeUtil.Modifier.OPTIONAL.equals(param.getModifier())) {
+                    otherType += " | undefined";
+                }
+                paramStringJoiner.add("p_" + param.getParamName() + ": " + param.getParamType().tsString() + otherType);
             }
             String returnTypeString = isPage ? "_Page<" + interfaceFunction.getReturnType().tsString() + ">" : interfaceFunction.getReturnType().tsString();
-            code.add(functionHeader + paramStringJoiner + ": Promise<" + returnTypeString + "> => {");
+            code.add(functionHeader + paramStringJoiner + ": _HttpResult<" + returnTypeString + "> => {");
             if (isPost) {
                 code.add(StrUtil.format(executeFormat, serviceUri + functionUri, executeParam));
             } else {
